--- a/index.html
+++ b/index.html
@@ -538,6 +538,11 @@
                 </p>
                 <p class="description_small">
                   Для детей разных возрастов предусмотрят разные входы в здание, также создадут возможность для проведения мастер-классов и различных мероприятий для всех желающих. 
+                  Таким образом лицей будет одновременно образовательным и социокультурным центром, а также местом образовательных проектов.  
+                </p>
+                <p class="description_small">
+                  На данный момент завершены инженерные изыскания, продолжаются работы по проектированию. Стройка начнется в 2025 году. 
+                  После ее завершения здание передадут администрации Норильска.  
                 </p>
               </div>
             </div>
@@ -640,10 +645,13 @@
               <div class="comfort_column_text">
                 <h4>Ремонт Заполярного госуниверситета</h4>
                 <p class="description_small">
-                  Обновление проведут в главном вузе Норильска. Историческое здание отремонтируют, а напротив построят новый студенческий комплекс. 
-                  Он будет состоять из трех блоков: трехэтажный — общественный, семиэтажный — для преподавателей и пятиэтажный — для студентов. 
-                  Предусмотрены медицинские, административные и учебные помещения, конференц-зал, рекреационные зоны и зона коворкинга, лифты, открытые парадные лестницы 
-                  с естественным освещением.
+                  Главный вуз Норильска - Заполярный государственный университет имени Н.М. Федоровского тоже ждет обновление. Здание возведено 73 года назад и требует капитального ремонта.
+                </p>
+                <p class="description_small">
+                  На данный момент на всех этажах выполнены демонтажные работы. Также завершена разработка документации, получено одобрение от госэкспертизы и оценка сметы.
+                </p>
+                <p class="description_small">
+                  Строительно-монтажные работы начнутся в 2025, а завершатся — в 2027 году.
                 </p>
               </div>
             </div>
