copyright and photo fix

--- a/index.html
+++ b/index.html
@@ -248,7 +248,6 @@
       <div id="tab9" class="tab_item">
         <div class="tab_item_img colorize-animation">
           <img src="09.jpg" alt="С 2011" class="tab_item_img_img"/>
-          <p class="copyright">Фото: ttelegraf.ru</p>
         </div>
         <div class="tab_item_text">
           <h4>Программа переселения</h4>
@@ -574,7 +573,6 @@
               <button class="close-btn">×</button>
               <div class="comfort_column_img">
                 <img src="602.jpg" alt="Комплексный центр социального обслуживания населения"/>
-                <p class="copyright">Фото: ttelegraf.ru</p>
                 <div class="overlay"></div>
                 <p class="hover-text">Комплексный центр социального обслуживания населения</p>
               </div>
@@ -638,7 +636,6 @@
               <button class="close-btn">×</button>
               <div class="comfort_column_img">
                 <img src="609.jpg" alt="Ремонт Заполярного госуниверситета"/>
-                <p class="copyright">Фото: ttelegraf.ru</p>
                 <div class="overlay"></div>
                 <p class="hover-text">Ремонт Заполярного госуниверситета</p>                
               </div>
@@ -703,7 +700,6 @@
               <button class="close-btn">×</button>
               <div class="comfort_column_img">
                 <img src="605.jpg" alt="Северобус"/>
-                <p class="copyright">Фото: пресс-служба Горсовета депутатов г. Норильска</p>
                 <div class="overlay"></div>
                 <p class="hover-text">«Северобусы» и теплые остановки</p>
               </div>
@@ -836,9 +832,8 @@
             </p>
           </div>
         </div>
-      </div>      
-    </div>    
-          
+      </div>    
+    </div>      
 </main>
 
 <footer class="footer">
@@ -873,6 +868,7 @@
     </div>
     <div>
       Разработка и дизайн Newslab. © ООО «Лаборатория Новостей», 2003–2025.
+      <p>Фото: ttelegraf.ru, kcson-norilsk.ru, пресс-служба Горсовета депутатов г. Норильска</p>
     </div>
   </div>
 </footer>
@@ -905,7 +901,8 @@
 
   <!-- Нижняя часть -->
   <div class="footer__bottom">
-    <div class="footer__site"><a href="https://www.newslab.ru">www.newslab.ru  Разработка и дизайн Newslab. © ООО «Лаборатория Новостей», 2003–2025.</a></div>
+    <div class="footer__site"><a href="https://www.newslab.ru">www.newslab.ru  Разработка и дизайн Newslab. © ООО «Лаборатория Новостей», 2003–2025.</a>
+      <p>Фото: ttelegraf.ru, kcson-norilsk.ru, пресс-служба Горсовета депутатов г. Норильска</p></div>
   </div>
 </footer>
 
