--- a/index.html
+++ b/index.html
@@ -341,14 +341,14 @@
                 <div class="point-map triangle-map triangle-map-3" data-tooltip="Дома на пр. Солнечном"></div>              
                 <div class="point-map triangle-map triangle-map-9" data-tooltip="Дом на ул. Пионерская"></div>               
                 <div class="point-map triangle-map triangle-map-4" data-tooltip="Дом на ул. Лауреатов"></div>
-                <div class="point-map triangle-map triangle-map-8" data-tooltip="Дом на ул. Бауманская"></div> 
+                <div class="point-map triangle-map triangle-map-8" data-tooltip="Дом на ул. Бауманская"></div>
                 
-                <div class="point-map circle-map circle-map-3" data-tooltip="Ледовая арена «Айсберг»"></div>
-                <div class="point-map circle-map circle-map-4" data-tooltip="Поликлиника в Талнахе"></div>              
                 <div class="point-map circle-map circle-map-6" data-tooltip="Лицей имени Долгих"></div>
                 <div class="point-map circle-map circle-map-7" data-tooltip="Ремонт Заполярного госуниверситета"></div>
                 <div class="point-map circle-map circle-map-5" data-tooltip="Общественно-культурный центр «Башня»"></div>
                 <div class="point-map circle-map circle-map-2" data-tooltip="Комплексный центр социального обслуживания населения"></div>
+                <div class="point-map circle-map circle-map-3" data-tooltip="Ледовая арена «Айсберг»"></div>
+                <div class="point-map circle-map circle-map-4" data-tooltip="Поликлиника в Талнахе"></div> 
                 <div class="point-map circle-map circle-map-8" data-tooltip="Пожарное депо"></div>
                 <div class="point-map circle-map circle-map-9" data-tooltip="Детский сад в Кайеркане"></div>
               </div>              
@@ -396,7 +396,12 @@
           <p class="description">
             Очистка территории предполагает не только физический снос объекта и вывоз отходов, но и дальнейшую рекультивацию земли и переработку отходов.
           </p>
-
+        </div>
+      </div>
+    </div>
+    
+    <div class="container_mini">
+      <div class="content">
           <div class="twocol_container hist">
             <div class="twocol_column">
                 <div class="histogram">
