--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <div class="tab_header_item" onclick="switchTab('tab5')">1960-е</div>
         <div class="tab_header_item" onclick="switchTab('tab6')">1970-е</div>
         <div class="tab_header_item" onclick="switchTab('tab7')">1980-е</div>
-        <div class="tab_header_item" onclick="switchTab('tab8')">1990-е</div>
-        <div class="tab_header_item" onclick="switchTab('tab9')">С 2011-го</div>
+        <div class="tab_header_item" onclick="switchTab('tab8')">30 лет без стройки</div>
+        <div class="tab_header_item" onclick="switchTab('tab9')">Программа переселения</div>
       </div>
 
       <div id="tab1" class="tab_item active">
@@ -271,8 +271,7 @@
             <footer><cite>— Дмитрий Свиридов, заместитель председателя Законодательного собрания Красноярского края</cite></footer>
           </blockquote>
         </div>
-      </div>
-
+      </div> 
     </div>    
   </div>
 
@@ -449,7 +448,52 @@
           <blockquote class="blockquote_main">
             <p><span>Мы видим колоссальные изменения. Приятно смотреть на успешный пример реализации принципов экологической ответственности «Норникеля» не на словах, а на деле.</span></p>
             <footer><cite>— Светлана Радионова, руководитель Федеральной службы по надзору в сфере природопользования</cite></footer>
-          </blockquote>        
+          </blockquote> 
+          
+          <div class="incut_container">
+            <div class="incut_container_img">
+              <img src="geo-monitoring.svg" alt="geo-monitoring"/>
+            </div>
+            <div class="incut_container_text">
+              <p class="description">
+                <b>В связи с глобальным потеплением существует риск растепления многолетнемерзлых грунтов, что может снизить несущую способность оснований зданий 
+                и сооружений и повлечь риск возникновения аварийных ситуаций.</b> В связи с этим компания уделяет особое внимание мониторингу состояния зданий 
+                и сооружений, а именно:
+              </p>
+              <ul class="description">
+                <li>
+                  регулярно исследует состояние оснований зданий и сооружений, построенных на вечной мерзлоте;
+                </li>
+                <li>
+                  проводит геодезический мониторинг деформаций зданий;
+                </li>
+                <li>
+                  следит за изменением температуры грунтов в основании зданий;
+                </li>
+                <li>
+                  проверяет свои предприятия на соответствие операционным требованиям, предъявляемым к техническим подпольям;
+                </li>
+                <li>
+                  разрабатывает рекомендации и планы устранения выявленных нарушений для обеспечения безопасной эксплуатации зданий и сооружений.
+                </li>
+              </ul>
+              <p class="description">
+                Для осуществления постоянного контроля над риск-фактором деградации многолетнемерзлых грунтов «Норникель» развернул систему мониторинга, охватывающую два направления:
+              </p>
+              <ul class="description">
+                <li>
+                  геотехнический мониторинг;
+                </li>
+                <li>
+                  фоновый мониторинг.
+                </li>
+              </ul>
+              <p class="description">
+                Данные направления деятельности реализуют расположенный в Норильске Центр мониторинга зданий и сооружений и Департамент научно-технического сопровождения 
+                эксплуатации зданий и сооружений в условиях Крайнего Севера.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
